# pops-util

helm/openbao-authly-dev/: Chart.yaml
helm/openbao-authly-dev/templates/: template.yaml
observability/prometheus/: docker-compose.yml
observability/prometheus/prometheus/: prometheus.yml
otel-demo-service/: Cargo.toml  Dockerfile
otel-demo-service/src/: main.rs
